--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Sacramento&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Sacramento&display=swap" rel="stylesheet">
         <title>Ganesh C L</title>
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div class="top-container">
