--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/ganesh-c-l-746472163/">LinkedIn</a> <br>
-            <a class="footer-link" href="https://jambuganesh.github.io/Resume/">Online CV</a> <br><br>
+            <a class="footer-link" href="https://jambuganesh.github.io/Online-CV/">Online CV</a> <br><br>
             <p>© 2021 Ganesh C L</p>
           </div>
     </body>
