--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top-container">
             <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
             <h1 class="name-title">I'm Ganesh</h1>
-            <p>Engineering student, RVCE</p>
+            <p class="para">Engineering student, RVCE</p>
             <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
             <img src="images/mountain.png" alt="mountain-img">
         </div>
